Fix vertical alignment, sorting can be 'selected' and is otherwise grey

--- a/addon/components/file-browser/style.scss
+++ b/addon/components/file-browser/style.scss
@@ -205,6 +205,15 @@
     }
 
     .file-row-col {
+        padding-top: 2px;
         margin-left: -1px;
+    }
+
+    .sorting {
+        cursor: pointer;
+        color: #999;
+    }
+    .sorting.active {
+        color: black;
     }
 }
